# Discord.CPP

./: .clang-tidy  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Discord.C++.sln  Dockerfile  Doxyfile  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql-analysis.yml
Discord.C++/: Activity.cpp  Activity.h  ApplicationCommand.cpp  ApplicationCommand.h  ApplicationCommandOption.cpp  ApplicationCommandOption.h  AudioSource.h  Channel.cpp  Channel.h  ChannelHelper.h  DMChannel.cpp  DMChannel.h  Discord.C++.vcxproj  Discord.C++.vcxproj.filters  Discord.cpp  Discord.h  DiscordObject.cpp  DiscordObject.h  Embed.cpp  Embed.h  Emoji.cpp  Emoji.h  Exceptions.cpp  Exceptions.h  FFmpegAudioSource.cpp  FFmpegAudioSource.h  FileAudioSource.cpp  FileAudioSource.h  Future.h  Gateway.cpp  Gateway.h  Guild.cpp  Guild.h  GuildChannel.cpp  GuildChannel.h  Intents.cpp  Intents.h  Interaction.cpp  Interaction.h  InteractionData.cpp  (+40 more)
docs/: _activity_8cpp.html  _activity_8h.html  _activity_8h.js  _activity_8h_source.html  _application_command_8cpp.html  _application_command_8h.html  _application_command_8h.js  _application_command_8h_source.html  _application_command_option_8cpp.html  _application_command_option_8h.html  _application_command_option_8h.js  _application_command_option_8h_source.html  _audio_source_8h.html  _audio_source_8h.js  _audio_source_8h_source.html  _channel_8cpp.html  _channel_8h.html  _channel_8h.js  _channel_8h_source.html  _channel_helper_8h.html  _channel_helper_8h.js  _channel_helper_8h_source.html  _d_m_channel_8cpp.html  _d_m_channel_8h.html  _d_m_channel_8h.js  _d_m_channel_8h_source.html  _discord_8cpp.html  _discord_8h.html  _discord_8h.js  _discord_8h_source.html  _discord_object_8cpp.html  _discord_object_8cpp.js  _discord_object_8h.html  _discord_object_8h.js  _discord_object_8h_source.html  _embed_8cpp.html  _embed_8h.html  _embed_8h.js  _embed_8h_source.html  _emoji_8cpp.html  (+431 more)
docs/html/: _channel_8h_source.html  _discord_8cpp.html  _discord_8h.html  _discord_8h_source.html  _discord_object_8cpp.html  _discord_object_8h_source.html  _guild_8cpp.html  _guild_8h.html  _guild_8h_source.html  _guild_channel_8h_source.html  _logger_8cpp.html  _member_8cpp.html  _member_8h_source.html  _message_8cpp.html  _message_8h.html  _user_8cpp.html  _user_8h.html  _user_8h_source.html  annotated.html  class_discord_c_p_p_1_1_channel-members.html  class_discord_c_p_p_1_1_channel.html  class_discord_c_p_p_1_1_discord_object.html  class_discord_c_p_p_1_1_guild_channel.html  class_discord_c_p_p_1_1_member-members.html  class_discord_c_p_p_1_1_message-members.html  class_discord_c_p_p_1_1_message.html  class_discord_c_p_p_1_1_user.html  class_discord_c_p_p_1_1snowflake-members.html  class_discord_c_p_p_1_1snowflake.html  class_logger-members.html  dir_bc90692f03e111e5ad06ece758d3dee2.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  hierarchy.html  index.html  (+9 more)
docs/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_15.js  all_9.js  all_c.js  classes_0.js  classes_1.js  classes_4.js  classes_7.js  defines_0.js  defines_2.js  enums_0.js  enums_1.js  enums_3.js  enums_5.js  enumvalues_2.js  enumvalues_4.js  enumvalues_8.js  enumvalues_b.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  functions_f.js  namespaces_0.js  variables_10.js  variables_14.js  variables_4.js  variables_5.js  variables_9.js  variables_c.js  variables_e.js  variables_f.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+108 more)
test_bot/: main.cpp  test_bot.vcxproj  test_bot.vcxproj.filters
